# zeabot-rs

./: Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: prod.yml
src/: bot.rs  command.rs  error.rs  helper.rs  main.rs  prelude.rs
src/commands/: help.rs  join.rs  leave.rs  loop.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs
src/utils/: discord.rs  lavalink.rs  mod.rs
