[package]
name = "zeabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Async
tokio = { version = "1.35.1", features = ["full"] }

#Discord
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "voice",
] }
poise = "0.6.1" #Outdated for now
#Discord player
songbird = { version = "0.4.3", features = [
    "driver",
    "gateway",
    "builtin-queue",
] }
lavalink-rs = { version = "0.12.0", features = ["serenity", "songbird"] }

#Web
# reqwest = "0.11.23"

#Misc
thiserror = "1"
# youtube_dl = { version = "0.9.0", features = ["tokio"] }
# symphonia = { version = "0.5.3", features = ["aac", "alac", "mp3"] }
time = "0.3.36"
openssl = { version = "0.10", features = ["vendored"] }
